fixed spacing between the items on the website

--- a/style.css
+++ b/style.css
@@ -32,7 +32,8 @@ body {
 
 .velkommen {
   width: 450px;
-  margin: -50;
+  margin-top: -70px;
+  
   text-align: center;
   font-family: 'Times New Roman', Times, serif;
   color: white
@@ -45,7 +46,7 @@ body {
   align-items: center;    /* Sentrerer elementene horisontalt */
   text-align: center;     /* Sentrerer selve teksten inni avsnittet */
   max-width: 800px;       /* Setter en maksbredde for bedre lesbarhet */
-  margin: 0 auto;         /* Sentrerer hele beholderen på siden */
+  margin: -30px;         /* Sentrerer hele beholderen på siden */
   padding: 60px;
   font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
   color: white;
@@ -54,7 +55,7 @@ body {
 .gaben-bilde {
   width: 300px;
   height: auto;
-  margin-top: -30px;
+  margin-top: 10px;
   border-radius: 26px;
 }
   
